@@ -482,7 +482,6 @@
           <align>center</align>
           <itemgap>0</itemgap>
           <onleft>9000</onleft>
-          <onleft condition="Skin.HasSetting(MenuVolumeControl)">Skin.ToggleSetting(MenuVolumeControl)</onleft>
           <onright>8001</onright>
           <onup>SetFocus(3)</onup>
           <ondown>SetFocus(2)</ondown>
@@ -584,6 +583,207 @@
             <animation_off effect="fade" end="60" time="0">WindowOpen</animation_off>
             <animation_off effect="fade" start="100" end="60" time="300">UnFocus</animation_off>
             <visible>!Skin.HasSetting(DotMatrixFont)</visible>
+          </control>
+        </control>
+        <control type="group" id="9019">
+          <defaultcontrol always="true">603</defaultcontrol>
+          <posx>60</posx>
+          <width>240</width>
+          <height>720</height>
+          <itemgap>0</itemgap>
+          <onleft_off>9000</onleft_off>
+          <onright_off>8001</onright_off>
+          <visible>Container(9000).HasFocus(28)</visible>
+          <!-- Buttons for the grouplist -->
+          <control type="button" id="600">
+            <posx>0</posx>
+            <posy>5</posy>
+            <width>115</width>
+            <height>115</height>
+            <label>-</label>
+            <texturefocus>OSDPrevTrackFO.png</texturefocus>
+            <texturenofocus>OSDPrevTrackNF.png</texturenofocus>
+            <onleft>9000</onleft>
+            <onright>8001</onright>
+            <ondown>606</ondown>
+            <onup>-</onup>
+            <onback>left</onback>
+            <onclick>XBMC.PlayerControl(Previous)</onclick>
+          </control>
+          <control type="button" id="606">
+            <posx>0</posx>
+            <posy>130</posy>
+            <width>115</width>
+            <height>115</height>
+            <label>-</label>
+            <texturefocus>OSDRewindFO.png</texturefocus>
+            <texturenofocus>OSDRewindNF.png</texturenofocus>
+            <onup>600</onup>
+            <ondown>603</ondown>
+            <onclick>XBMC.PlayerControl(Rewind)</onclick>
+            <visible>Window.IsVisible(MusicPlaylist) | Window.IsVisible(VideoPlaylist) | Player.HasVideo</visible>
+            <onleft>9000</onleft>
+            <onright>8001</onright>
+            <onback>left</onback>
+          </control>
+          <control type="group">
+            <animation effect="slide" start="0,0" end="0,120" time="0" condition="Window.IsVisible(MusicPlaylist) | Window.IsVisible(VideoPlaylist) | Player.HasVideo">Conditional</animation>
+            <control type="togglebutton" id="603">
+              <posx>0</posx>
+              <posy>130</posy>
+              <width>115</width>
+              <height>115</height>
+              <label>-</label>
+              <texturefocus>OSDPauseFO.png</texturefocus>
+              <texturenofocus>OSDPauseNF.png</texturenofocus>
+              <usealttexture>Player.Paused | Player.Forwarding | Player.Rewinding</usealttexture>
+              <alttexturefocus>OSDPlayFO.png</alttexturefocus>
+              <alttexturenofocus>OSDPlayNF.png</alttexturenofocus>
+              <onup>606</onup>
+              <ondown>601</ondown>
+              <onclick>XBMC.PlayerControl(Play)</onclick>
+              <onleft>9000</onleft>
+              <onright>8001</onright>
+              <onback>left</onback>
+            </control>
+            <control type="button" id="601">
+              <posx>0</posx>
+              <posy>250</posy>
+              <width>115</width>
+              <height>115</height>
+              <label>-</label>
+              <texturefocus>OSDStopFO.png</texturefocus>
+              <texturenofocus>OSDStopNF.png</texturenofocus>
+              <onup>603</onup>
+              <ondown>607</ondown>
+              <onclick>left</onclick>
+              <onclick>XBMC.PlayerControl(Stop)</onclick>
+              <onleft>9000</onleft>
+              <onright>8001</onright>
+              <onback>left</onback>
+            </control>
+            <control type="button" id="607">
+              <posx>0</posx>
+              <posy>370</posy>
+              <width>115</width>
+              <height>115</height>
+              <label>-</label>
+              <texturefocus>OSDForwardFO.png</texturefocus>
+              <texturenofocus>OSDForwardNF.png</texturenofocus>
+              <onup>601</onup>
+              <ondown>602</ondown>
+              <onclick>XBMC.PlayerControl(Forward)</onclick>
+              <visible>Window.IsVisible(MusicPlaylist) | Window.IsVisible(VideoPlaylist) | Player.HasVideo</visible>
+              <onleft>9000</onleft>
+              <onright>8001</onright>
+              <onback>left</onback>
+            </control>
+            <control type="button" id="602">
+              <posx>0</posx>
+              <posy>370</posy>
+              <width>115</width>
+              <height>115</height>
+              <label>-</label>
+              <texturefocus>OSDNextTrackFO.png</texturefocus>
+              <texturenofocus>OSDNextTrackNF.png</texturenofocus>
+              <onup>607</onup>
+              <ondown>604</ondown>
+              <onclick>XBMC.PlayerControl(Next)</onclick>
+              <animation effect="slide" start="0,0" end="0,120" time="0" condition="Window.IsVisible(MusicPlaylist) | Window.IsVisible(VideoPlaylist) | Player.HasVideo">Conditional</animation>
+              <onleft>9000</onleft>
+              <onright>8001</onright>
+              <onback>left</onback>
+            </control>
+          </control>
+          <control type="group">
+            <visible>!Window.IsVisible(MusicPlaylist) + !Window.IsVisible(VideoPlaylist) + !Player.HasVideo</visible>
+            <control type="button" id="604">
+              <posx>0</posx>
+              <posy>490</posy>
+              <width>115</width>
+              <height>115</height>
+              <label>-</label>
+              <texturefocus>-</texturefocus>
+              <texturenofocus>-</texturenofocus>
+              <onclick>XBMC.PlayerControl(Repeat)</onclick>
+              <onup>602</onup>
+              <ondown>605</ondown>
+              <onleft>9000</onleft>
+              <onright>8001</onright>
+              <onback>left</onback>
+            </control>
+            <control type="image">
+              <posx>0</posx>
+              <posy>490</posy>
+              <width>115</width>
+              <height>115</height>
+              <texture>OSDRepeatNF.png</texture>
+              <visible>!Playlist.IsRepeat + !Playlist.IsRepeatOne</visible>
+              <visible>!Control.HasFocus(604)</visible>
+            </control>
+            <control type="image">
+              <posx>0</posx>
+              <posy>490</posy>
+              <width>115</width>
+              <height>115</height>
+              <texture>OSDRepeatFO.png</texture>
+              <visible>!Playlist.IsRepeat + !Playlist.IsRepeatOne</visible>
+              <visible>Control.HasFocus(604)</visible>
+            </control>
+            <control type="image">
+              <posx>0</posx>
+              <posy>490</posy>
+              <width>115</width>
+              <height>115</height>
+              <texture>OSDRepeatOneNF.png</texture>
+              <visible>Playlist.IsRepeatOne</visible>
+              <visible>!Control.HasFocus(604)</visible>
+            </control>
+            <control type="image">
+              <posx>0</posx>
+              <posy>490</posy>
+              <width>115</width>
+              <height>115</height>
+              <texture>OSDRepeatOneFO.png</texture>
+              <visible>Playlist.IsRepeatOne</visible>
+              <visible>Control.HasFocus(604)</visible>
+            </control>
+            <control type="image">
+              <posx>0</posx>
+              <posy>490</posy>
+              <width>115</width>
+              <height>115</height>
+              <texture>OSDRepeatAllNF.png</texture>
+              <visible>Playlist.IsRepeat</visible>
+              <visible>!Control.HasFocus(604)</visible>
+            </control>
+            <control type="image">
+              <posx>0</posx>
+              <posy>490</posy>
+              <width>115</width>
+              <height>115</height>
+              <texture>OSDRepeatAllFO.png</texture>
+              <visible>Playlist.IsRepeat</visible>
+              <visible>Control.HasFocus(604)</visible>
+            </control>
+            <control type="togglebutton" id="605">
+              <posx>0</posx>
+              <posy>610</posy>
+              <width>115</width>
+              <height>115</height>
+              <label>-</label>
+              <texturefocus>OSDRandomOffFO.png</texturefocus>
+              <texturenofocus>OSDRandomOffNF.png</texturenofocus>
+              <usealttexture>Playlist.IsRandom</usealttexture>
+              <alttexturefocus>OSDRandomOnFO.png</alttexturefocus>
+              <alttexturenofocus>OSDRandomOnNF.png</alttexturenofocus>
+              <onclick>XBMC.PlayerControl(Random)</onclick>
+              <onup>604</onup>
+              <ondown>-</ondown>
+              <onleft>9000</onleft>
+              <onright>8001</onright>
+              <onback>left</onback>
+            </control>
           </control>
         </control>
       </control>
@@ -751,6 +951,12 @@
             <icon>special://skin/backgrounds/playdisc.jpg</icon>
             <thumb>$INFO[Skin.String(Home_Custom_Back_PlayDisc_Folder)]</thumb>
             <visible>System.HasMediaDVD</visible>
+          </item>
+          <item id="28">
+            <label>Player</label>
+            <icon_off>special://skin/backgrounds/power.jpg</icon_off>
+            <visible>Player.HasAudio | Player.HasVideo</visible>
+            <onclick>right</onclick>
           </item>
           <item id="13">
             <label>On-Board</label>
